2022.Aug.2nd Commit

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Chegel陈老师</h1>
+<h1>陈老师</h1>
 <p>任教国际学校初高中部&nbsp;</p>
 <h2>业余辅导：&nbsp;</h2>
 <p>深圳AP/Alevel计算机科学辅导 AP计算机， Alevel计算机辅导杭州提供AP计算机科学A／AS／A- Level计算机科学辅导&nbsp;</p>
 <p>拥有7年C++编写经验，4年编程教学经验，精通AP／ Alevel课程教学，本科国内Top工学学位，海外Top学校工学硕士学位。在深圳提供一对一，一对多辅导，中英双语教学，可英语授课，擅长 AP computer science A，AS / A- Level Computer Science教学。亦可教授A-Level Information Technology。 所教授学生均在考试中取得好成绩，学生遍及加拿大多伦多温哥华，美国洛杉矶纽约，澳洲悉尼希腊雅典等城市。 </p>
 <p>深圳信息学奥利匹克竞赛辅导，信奥C++辅导&nbsp;</p>
 <p>曾辅导过数十位杭州学生，在信息学奥林匹克竞赛NOIP普及组中取得好成绩并顺利晋级提高组（现在竞赛改名CSP）。擅长教学生从0开始学习C++或从Python/Scratch过渡至C++学习，中英双语教学，可英语授课，可定制学习计划。 目标学生：2年级～9年级 形式：在线1对1，线下1对1或线下1对。 参考教材：信息学奥赛一本通C++版&nbsp;</p>
-<p>联系方式：chen2chong2@163.com</p>
+<p>联系方式：<a href="chen2chong2@163.com">chen2chong2@163.com</a></p>
 <h2>博客目录Blog Content</h2>
 <h3><a href="DailyLife.html">日常生活Daily Life&nbsp;</a></h3>
 </body>
