--- a/DailyLife.html
+++ b/DailyLife.html
@@ -6,7 +6,8 @@
 </head>
 
 <body>
+<pre><a href="index.html">-主页Homepage</a></pre>
 <h1>日常生活Daily Life &nbsp;</h1>
-<p><a href="Decoration.html"> 装修Dacoration</a></p>
+<p><a href="decoration.html"> 装修Dacoration</a></p>
 </body>
 </html>
