--- a/Decoration.html
+++ b/Decoration.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+<pre><a href="Dailylife.html">-日常生活Daily Life</a></pre>
 <h1> 装修Dacoration</h1>
 <p></p>
 <img src="Image/Decoration01.png" width="1036" height="1196" alt=""/>
