--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>陈老师</h1>
+<h1>崇老师</h1>
 <p>任教国际学校初高中部&nbsp;</p>
 <h2>业余辅导：&nbsp;</h2>
 <p>深圳AP/Alevel计算机科学辅导 AP计算机， Alevel计算机辅导杭州提供AP计算机科学A／AS／A- Level计算机科学辅导&nbsp;</p>
@@ -10,6 +10,8 @@
 <p>曾辅导过数十位杭州学生，在信息学奥林匹克竞赛NOIP普及组中取得好成绩并顺利晋级提高组（现在竞赛改名CSP）。擅长教学生从0开始学习C++或从Python/Scratch过渡至C++学习，中英双语教学，可英语授课，可定制学习计划。 目标学生：2年级～9年级 形式：在线1对1，线下1对1或线下1对。 参考教材：信息学奥赛一本通C++版&nbsp;</p>
 <p>联系方式：<a href="chen2chong2@163.com">chen2chong2@163.com</a></p>
 <h2>博客目录Blog Content</h2>
-<h3><a href="DailyLife.html">日常生活Daily Life&nbsp;</a></h3>
+<h3><a href="Readingnotes.html">读书笔记Reading Notes&nbsp;</a></h3>
+<h3><a href="Dailylife.html">日常生活Daily Life&nbsp;</a></h3>
+<h3>待解问题Problems to Be Solved&nbsp;</h3>
 </body>
 </html>
