--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 <h2>博客目录Blog Content</h2>
 <h3><a href="Readingnotes.html">读书笔记Reading Notes&nbsp;</a></h3>
 <h3><a href="Dailylife.html">日常生活Daily Life&nbsp;</a></h3>
-<h3>待解问题Problems to Be Solved&nbsp;</h3>
+<h3><a href="ptbs.html">待解问题Problems to Be Solved&nbsp;</a></h3>
 </body>
 </html>
