--- a/FengXueKeXueJianFeiFa2022.html
+++ b/FengXueKeXueJianFeiFa2022.html
@@ -753,7 +753,7 @@ div.WordSection1
 <p>
   <o:p></o:p></p>
 
-<p><a href="file:///Macintosh HD/Users/chongchen/Downloads/Readingnotes.html">
+<p><a href="Readingnotes.html">
   <o:p> 读书笔记Reading Notes</o:p>
   <o:p>&nbsp;</o:p>
 </a></p>
