--- a/DailyLife.html
+++ b/DailyLife.html
@@ -7,7 +7,7 @@
 
 <body>
 <pre><a href="index.html">-主页Homepage</a></pre>
-<h1>日常生活Daily Life &nbsp;</h1>
-<p><a href="decoration.html"> 装修Dacoration</a></p>
+<h1>日常生活Daily Life</h1>
+<p><a href="Decoration.html"> 装修Dacoration</a></p>
 </body>
 </html>
