--- a/FengXueKeXueJianFeiFa2022.html
+++ b/FengXueKeXueJianFeiFa2022.html
@@ -753,12 +753,8 @@ div.WordSection1
 <p>
   <o:p></o:p></p>
 
-<p><a href="Readingnotes.html">
-  <o:p> 读书笔记Reading Notes</o:p>
-  <o:p>&nbsp;</o:p>
-</a></p>
-<h1>冯雪《冯雪科学减肥法》2022.6
-  &nbsp;</h1>
+<p><a href="Readingnotes.html">-读书笔记Reading Notes</a></p>
+<h1>冯雪《冯雪科学减肥法》2022.6</h1>
 <h2>CH01科学减肥的逻辑 </h2>
 <p class=MsoNormal><span lang=ZH-CN style='font-family:DengXian;mso-ascii-font-family:
 Calibri;mso-ascii-theme-font:minor-latin;mso-fareast-theme-font:minor-fareast;
