--- a/Readingnotes.html
+++ b/Readingnotes.html
@@ -19,5 +19,9 @@
 <p>Jordan B. Peterson《意义地图》《人生十二法则》《人生十二法则2》&nbsp;</p>
 <p>关于动物：</p>
 <p>Hal Herzog《为什么狗是宠物猪是食物》&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>*文件名命名规则：首字母大写，其余小写。文件名为书名/书名拼音接出版年份（无空格）。&nbsp;</p>
 </body>
 </html>
