--- a/index.html
+++ b/index.html
@@ -13,5 +13,11 @@
 <h3><a href="Readingnotes.html">读书笔记Reading Notes&nbsp;</a></h3>
 <h3><a href="Dailylife.html">日常生活Daily Life&nbsp;</a></h3>
 <h3><a href="ptbs.html">待解问题Problems to Be Solved&nbsp;</a></h3>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<h2>待做待测</h2>
+<p><input type="checkbox" name="vehicle" value="Car" checked="" /> 用AI写网文看看是否畅销</p>
 </body>
 </html>
